# GlobalHotkey

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  README_CN.md  README_EN.md  TODO.md  global_hotkeyConfig.cmake.in  install.bat  install.sh  install_for_wayland.sh  install_for_x11.sh
based_on_gbhk_projects/key_remap/example/: CMakeLists.txt
based_on_gbhk_projects/key_remap/include/global_hotkey/: base.hpp  key.hpp  return_code.hpp  utility.hpp
based_on_gbhk_projects/key_remap/src/key/: key.cpp  key_private_x11.hpp
based_on_gbhk_projects/key_remap/src/key_combination/: key_combination.cpp
based_on_gbhk_projects/key_remap/src/keyboard_hook_manager/: kbhm_private.cpp  kbhm_private_linux.cpp  kbhm_private_linux.hpp  kbhm_private_win.hpp  keyboard_hook_manager.cpp
cmake/: global_hotkeyConfig.cmake.in
doc/: README_CN.md  README_EN.md  README_ZH.md
example/: CMakeLists.txt  example1.cpp
example/base_example/: CMakeLists.txt  main.cpp
example/event_queue/: CMakeLists.txt  block_queue.hpp  const_value.hpp  def.hpp  defs.hpp  event.hpp  event_handler.cpp  event_handler.hpp  event_queue.cpp  event_work.cpp  event_work.hpp  main.cpp  utility.cpp  utility.hpp
example/simple/: CMakeLists.txt  main.cpp
include/global_hotkey/: GlobalHotkey  base.hpp  base_global_hotkey.hpp  def.hpp  error_code.hpp  global_hotkey.h  global_hotkey.hpp  global_hotkey_base.h  global_hotkey_base.hpp  global_hotkey_disable_hook_fwd.hpp  global_hotkey_disable_register_fwd.hpp  global_hotkey_manager.hpp  global_macros.hpp  hook_ghm.hpp  hook_global_hotkey.h  hook_global_hotkey.hpp  hook_global_hotkey_manager.hpp  key.h  key.hpp  key_combination.hpp  keyboard_hook.h  keyboard_hook.hpp  keyboard_hook_manager.hpp  keycombination.h  keycombination.hpp  register_ghm.hpp  register_global_hotkey.h  register_global_hotkey.hpp  register_global_hotkey_manager.hpp  return_code.hpp  utility.hpp
include/global_hotkey/core/: base.hpp  constants.hpp  core.h  core.hpp  macros.h  macros.hpp  return_code.hpp  typealias.h  typealias.hpp
lib/MSVC/x32/: GlobalHotkey.lib  GlobalHotkeyd.idb  GlobalHotkeyd.lib
lib/MSVC/x64/: GlobalHotkey.lib  GlobalHotkeyd.idb
lib/MinGW/x32/: GlobalHotkey.lib  GlobalHotkeyd.lib
lib/MinGW/x64/: GlobalHotkey.lib  GlobalHotkeyd.lib
min_err_reproduction/: CMakeLists.txt  main.cpp
misc/: Outline_CN.md
script/linux/: build-example.sh  build-shared.sh  build-static.sh  build.sh  buildrun-nohook.sh  buildrun-noreg.sh
script/mac/: build-example.sh  build-shared.sh  build-static.sh  build.sh
script/windows/: build-example.bat  build-shared.bat  build-static.bat  build.bat  buildrun-nohook.bat  buildrun-noreg.bat
src/: base_global_hotkey.cpp  global_hotkey_base.cpp  hook_global_hotkey.cpp  key.cpp  key_combination.cpp  keyboard_hook.cpp  keycombination.cpp  register_global_hotkey.cpp  utility.cpp
src/global_hotkey_manager/: ghm_private.cpp  ghm_private.hpp  global_hotkey_manager.cpp  global_hotkey_manager_private.cpp  global_hotkey_manager_private.hpp
src/hook_ghm/: hook_ghm.cpp  hook_ghm_private.cpp  hook_ghm_private.hpp
src/hook_global_hotkey_manager/: hook_ghm_private.cpp  hook_ghm_private.hpp  hook_global_hotkey_manager.cpp
src/key/: key.cpp  key_linux.cpp  key_mac.cpp  key_private.hpp  key_private_linux.cpp  key_private_mac.cpp  key_private_win.cpp  key_private_x11.cpp  key_private_x11.hpp  key_win.cpp
src/key_combination/: key_combination.cpp
src/keyboard_hook/: keyboard_hook.cpp  keyboard_hook_private.cpp  keyboard_hook_private.hpp  keyboard_hook_private_linux.cpp  keyboard_hook_private_linux.hpp  keyboard_hook_private_mac.cpp  keyboard_hook_private_mac.hpp  keyboard_hook_private_win.cpp  keyboard_hook_private_win.hpp
src/keyboard_hook_manager/: kbhm_private.cpp  kbhm_private.hpp  kbhm_private_linux.cpp  kbhm_private_linux.hpp  kbhm_private_mac.cpp  kbhm_private_mac.hpp  kbhm_private_win.cpp  kbhm_private_win.hpp  keyboard_hook_manager.cpp
src/register_ghm/: register_ghm.cpp  register_ghm_private.hpp  register_ghm_private_linux.cpp  register_ghm_private_linux.hpp  register_ghm_private_mac.cpp  register_ghm_private_mac.hpp  register_ghm_private_win.cpp  register_ghm_private_win.hpp
src/register_global_hotkey_manager/: register_ghm_private.cpp  register_ghm_private.hpp  register_ghm_private_linux.cpp  register_ghm_private_linux.hpp  register_ghm_private_mac.cpp  register_ghm_private_mac.hpp  register_ghm_private_win.cpp  register_ghm_private_win.hpp  register_ghm_private_x11.cpp  register_ghm_private_x11.hpp  register_global_hotkey_manager.cpp
src/utility/: utility.cpp  utility_private.cpp  utility_private.hpp
